# rustdock

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-clients.yml  release.yml
examples/: russh_smoke.rs  sftp_smoke.rs
frontend/: index.html
frontend/src/: App.vue  main.ts  styles.css  types.ts
frontend/src/components/: SessionSidebar.vue  TerminalPanel.vue  WorkspaceDock.vue
src/: lib.rs  runtime.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/domain/: mod.rs  session.rs  transfer_event.rs  transfer_job.rs
src/sftp/: mod.rs
src/ssh/: mod.rs
src/storage/: mod.rs  sqlite.rs
src/sync/: mod.rs
