[package]
name = "rustdock-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
russh = "0.57.1"
russh-sftp = "2.1.1"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
